--- a/task1.html
+++ b/task1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../index.html">На главную</a>
+    <a href="index.html">На главную</a>
 </body>
 </html>
 <h1>Практическое задание №1</h1>
@@ -39,4 +39,5 @@
     </a>
 
 </body>
+
 </html>
